--- a/css/style.css
+++ b/css/style.css
@@ -9,23 +9,26 @@
 }
 
 
+.pagos {
     
     
-
-
-.pagos{
-    background-color: black;
-    color: white;
+    color:orangered;
     display: flex;
     justify-content: center;
+    padding: 0.7rem;
+    background-color: black;
+}
+.pagos h3{
+    font-size: 1.1rem;
 }
 
 .hero__header{
     display: flex;
     justify-content: space-between;
-    padding: 0.8em;
-    background-image: url(../imagenes/84c1e40ea0e759e3f1505eb1788ddf3c_pattern.png);
-    text-shadow: 1px 1px 1px white;
+    padding-inline: 1rem;
+    padding-block: 0.5rem;
+    background-color: orangered;
+    text-shadow: 1px 1px 1px black;
 }
 
 .imagen_logo{
@@ -34,6 +37,7 @@
 
 .logo{
     font-family: 'Bebas Neue', sans-serif;
+    font-size: 1.1rem;
     
 }
 .hero__header a{
@@ -45,6 +49,9 @@
 }
 .envios{
     padding-top: 2.5rem;
+    color: white;
+    font-size: 1.3rem;
+    
 }
 
 i{
@@ -70,15 +77,27 @@ i{
 .menu__item a:hover{
     text-decoration: underline;
 }
+ 
+.hero__main{
+    display: flex;
+}
 
 
- .hero__main{ 
+ .hero__main > div{ 
      font-family: 'Bebas Neue', sans-serif; 
-     background-image: url(../imagenes/84c1e40ea0e759e3f1505eb1788ddf3c_pattern.png);
+     flex: 1;
      display: flex; 
+     flex-direction: row;
+     
      justify-content: space-around; 
      padding-block: 1rem; 
  } 
+.mercaderia{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap:8rem;
+}
+ 
 .articulos__item{
     list-style: none;
 }
@@ -89,7 +108,7 @@ i{
     margin-bottom: 10rem;
 }
 footer{
-    background-color:darkslategray ; 
+    background-color:orangered ; 
     padding-block: 2rem;
     padding-left: 5rem;
     
@@ -105,16 +124,13 @@ footer{
 }
 .sucursales{
     
-    padding-top: 1rem;
-    padding-left: 3rem;
+    padding-top: 2rem;
+    padding-left: 4rem;
     display: flex;
     margin-left: 5rem;
     
 }
-main{
-    background-image: url(../imagenes/84c1e40ea0e759e3f1505eb1788ddf3c_pattern.png);
-    height: 100vh;
-}
+
 
 .mediosPago{
     height: 5rem;
@@ -135,15 +151,27 @@ main{
     color:whitesmoke;
 }
 
+main h6{
+    font-size: 1.2rem;
+    display: flex;
+    justify-content: center;
+}
+.marcas{
+    display: flex;
+    justify-content: space-around;
+    padding: 1rem;
+}
+
+
 .grid{
-    padding: 6rem;
+    padding: 1rem;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
     grid-template-areas: 
         "item1 item2 item3";
-    gap: 2rem;
-    background-image: url(../imagenes/84c1e40ea0e759e3f1505eb1788ddf3c_pattern.png);    
+    gap: 2.5rem;
+    /* background-image: url(../imagenes/84c1e40ea0e759e3f1505eb1788ddf3c_pattern.png);     */
         
 }
 .grid__item{
@@ -151,7 +179,7 @@ main{
     background-size: cover;
     background-position: center center;
     color:white;
-    text-shadow: 1px 1px 1px  red;
+    text-shadow: 2px 2px 2px  red;
     
     
     
@@ -162,6 +190,7 @@ main{
 .grid__item h2{
     padding-left: 10rem;
     padding-top: 0.5rem;
+    font-size: 1.5rem;
      
 }
 
@@ -169,6 +198,7 @@ main{
 .grid__item h4{
     padding-left: 9rem;
     padding-top: 0.5rem;
+    font-size: 1.2rem;
      
 }
 .grid__item h4 a{
@@ -200,89 +230,85 @@ main{
     background-repeat: no-repeat;
 }
 
- .productos{
-    padding: 6rem;
-    padding-top: 1rem;
- }
 
- .calzado h3{
+.productos{
+    padding-left:2.5rem ;
     padding-top: 2rem;
- }
- 
-.zapatilla{
-    padding-left: 8rem;
+    padding-bottom: 2rem;
+    
     
 }
-.zapatilla img{
-    max-width: 100%;
-    
-} 
-
 
 .zapatillas{
-    display: grid;
-    grid-template-columns:1fr 1fr 1fr ;
-    grid-template-rows:  1fr 1fr;
-    text-align: center  ;
     
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.zapatilla img{
+    max-width: 200px;
+}
+
+.indumentaria{
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+}
+.campera img{
+    max-width: 200px;
     
     
 }
 .indumentaria h3{
     padding-top: 2rem;
-}
-
-
-.campera{
-    
-    padding-top: 5rem;
-
-    
-}
-
-.campera h5 {
-    padding-top: 2.5rem;
-}
-
-
+    padding-bottom: 2rem;
+} 
 .camperas{
     display: grid;
-    grid-template-columns:1fr 1fr 1fr ;
-    grid-template-rows:  1fr ;
-    text-align: center  ;
-    
+    grid-template-columns: 1fr 1fr 1fr;
 }
-
-.accesorios h3{
-    padding-top: 1rem;
-}
-
 
 .accesorios{
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+    
+}
+
+
+
+.gorras{
     display: grid;
-    grid-template-columns: 1fr 1fr ;
-    grid-row: 1fr;
-    gap: 5rem;
-    padding-top: 5rem;
+    grid-template-columns: 1fr 1fr 1fr;
+    
+}   
+    
+.gorra img{
+    max-width: 200px;
     
     
 }
-.gorra{
-    padding-top: 5rem;
-}
+
+
+
 @media screen and (max-width:480px){
     .hero__header{
-        flex-direction: column;   
+        flex-direction: row; 
+        
     }
+    .pagos h3{
+        font-size: 13px;
+    }
+    
     .envios{
         padding-top: 1.5rem;
+        font-size: 0.75rem;
     }
 
     .sucursales{
         padding-top: 1.5rem;
     }
     .grid__item img{
-        width: 270px;
+        
+        padding-left: 6rem;
     }
     .grid{
         display: flex;
@@ -290,11 +316,11 @@ main{
     }
 
     .grid h2{
-        padding-left: 7rem;
+        padding-left:11rem;
     }
 
-    .grid__item h4{
-        padding-left: 6rem;
+    .grid__item  h4{
+        padding-left: 10rem;
     }
 
     .piePagina{
@@ -314,9 +340,38 @@ main{
     .localizacion ul{
         margin-left: 6rem;
     }
-    
-    
-    
-
+    .marcas{
+        display:grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        row-gap: 1rem;
+    }
+    .hero__main {
+        display:grid;
+        
+        
+    } 
+    .mercaderia{
+        gap: 0;
+    }
+    .zapatillas{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    .camperas{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    .hero__main img{
+        max-width: 480px ;
+    }
 
 }
+
+        
+        
+        
+        
+        
+
+    
+
